BUGFIX: images on smaller layouts

--- a/app/assets/stylesheets/chakra/custom.css
+++ b/app/assets/stylesheets/chakra/custom.css
@@ -113,6 +113,6 @@ background-image: none;
 }
 
 .image-wrap {
-	width: 270px;
+	width: 100%;
 	height: 240px;
 }
